cm4all-beng-proxy (0.5.3) unstable; urgency=low

  * cgi: close request body on fork() failure
  * fork: added workaround for pipe-to-pipe splice()
  * http-cache: use cache entry when response ETag matches
  * cgi: loop in istream_cgi_read() to prevent blocking

 --

cm4all-beng-proxy (0.5.2) unstable; urgency=low

  * added filter cache
  * header-parser: added missing range check in header_parse_line()
  * fork: added event for writing to the child process
  * fork: don't splice() from a pipe
  * response: don't pass request body to unfocused processor
  * added filter type "pipe"

 -- Max Kellermann <mk@cm4all.com>  Wed, 29 Apr 2009 13:24:26 +0200

cm4all-beng-proxy (0.5.1) unstable; urgency=low

  * processor: fixed base=child assertion failure
  * handler: close request body if it was not consumed
  * static-file: generate Last-Modified and ETag response headers
  * static-file: obey the Content-Type provided by the translation server
  * static-file: get Content-Type from extended attribute
  * http-cache: use istream_null when cached resource is empty

 -- Max Kellermann <mk@cm4all.com>  Mon, 27 Apr 2009 10:00:20 +0200

cm4all-beng-proxy (0.5) unstable; urgency=low

  * processor: accept c:mode/c:base attributes in any order
  * processor: removed alternative (anchor) rewrite syntax

 -- Max Kellermann <mk@cm4all.com>  Mon, 20 Apr 2009 22:04:19 +0200

cm4all-beng-proxy (0.4.10) unstable; urgency=low

  * processor: lift length limitation for widget parameters
  * translate: abort if a packet is too large
  * translate: support MAX_AGE for the whole response
  * hashmap: fix corruption of slot chain in hashmap_remove_value()

 -- Max Kellermann <mk@cm4all.com>  Fri, 17 Apr 2009 13:02:50 +0200

cm4all-beng-proxy (0.4.9) unstable; urgency=low

  * http-cache: explicitly start reading into cache
  * cgi: clear "headers" variable before publishing the response
  * translate: use DOCUMENT_ROOT as CGI parameter
